--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta
             name="description"
-            content="Documentation for the Kittn API"
+            content="Documentation for the MyPhone API"
         >
     <title>API Reference</title>
 
@@ -303,7 +303,7 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-8e70cfbc.png" class="logo" alt="" />
+      <img src="images/logo-096b82e5.png" class="logo" alt="" />
         <div class="lang-selector">
               <a href="#" data-language-name="graphql">graphql</a>
               <a href="#" data-language-name="json">json</a>
