deploy: 5786dcca3fac3ce33f3a55ab7f3f39c4bf199e51

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             name="description"
             content="Documentation for the MyPhone API"
         >
-    <title>API Reference</title>
+    <title>API Myphone</title>
 
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -461,7 +461,6 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='#'>Sign Up for a Developer Key</a></li>
             <li><a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
